6/1/2019:
Updated file paths

This affects the following files:
chemistry-vr-photos.html


6/1/2019:
Compressed planet-clip-art-planet-1960-clear.png to planet-clip-art-planet-64-clear.png.

This affects the following files:
planet-clip-art-planet-1960-clear.png
planet-clip-art-planet-64-clear.png


6/1/2019:
Increased resolution of favicon.ico to suit high-density displays.

This affects the following files:
favicon.ico


6/1/2019:
Set background-size to cover so that it stretches and shrinks without repeating.

This affects the following files:
style.css


5/31/2019:
Added about.html for background on PicoPlanet.

This affects the following files:
All .html files
PicoPlanetBackground7.png
PicoPlanetBackground8.png
PicoPlanetBackground9.png


5/31/2019:
Added <meta name="viewport" content="width=device-width, initial-scale=1.0"> to fix scaling on index.html.

This affects the following files:
index.html


5/31/2019:
Added links to pictures in order to enlarge them.

This affects the following files:
chemistry-vr-photos.html


5/27/2019:
Changed PANO_X to PANO_X_WEB and reduced file sizes for each panorama by ~5MB.
Updated chemistry-vr-photos.html to incorporate these changes.
Added changelog.txt for those who are interested.

This affects the following files:
PANO_1.jpg
PANO_1_WEB.jpg
PANO_2.jpg
PANO_2_WEB.jpg
PANO_3.jpg
PANO_3_WEB.jpg
chemistry-vr-photos.html