@@ -95,7 +95,7 @@
 					Share this page via
 					<br>
 					<!-- Go to www.addthis.com/dashboard to customize your tools -->
-					<div class="addthis_inline_share_toolbox" style="padding-left: 1%"></div>  
+					<div class="addthis_inline_share_toolbox" data-url="picoplanetdev.tk/apps" data-title="Apps - PicoPlanet Developing" style="padding-left: 1%"></div>
 				</p>
 			</main>
 		</div>
