@@ -114,7 +114,7 @@
 				<p class="paragraph">
 					Share this page via
 					<!-- Go to www.addthis.com/dashboard to customize your tools -->
-					<div class="addthis_inline_share_toolbox" style="padding-left: 1%"></div>
+					<div class="addthis_inline_share_toolbox" data-url="picoplanetdev.tk/chemistry-vr-photos" data-title="Chemistry VR Photos - PicoPlanet Developing" style="padding-left: 1%"></div>
 				</p>
 			</main>
 		</div>
