@@ -87,7 +87,7 @@
 					Share this site on Social Media below!
 					<br>
 	                <!-- Go to www.addthis.com/dashboard to customize your tools -->
-	                <div class="addthis_inline_share_toolbox" style="padding-left: 1%"></div>
+	                <div class="addthis_inline_share_toolbox" data-url="picoplanetdev.tk/contact" data-title="Contact Us - PicoPlanet Developing" style="padding-left: 1%"></div>
 				</p>
 
 			</main>
