@@ -94,7 +94,7 @@
 					Share this site on Social Media below!
 					<br>
 	                <!-- Go to www.addthis.com/dashboard to customize your tools -->
-	                <div class="addthis_inline_share_toolbox" style="padding-left: 1%"></div>
+	                <div class="addthis_inline_share_toolbox" data-url="picoplanetdev.tk/donate" data-title="Donate - PicoPlanet Developing" style="padding-left: 1%"></div>
 				</p>
 			</main>
 		</div>
