@@ -13,7 +13,7 @@
 		<meta name="keywords" content="PicoPlanet, PicoPlanetDev, App, Apps, VR Playground, Rabbit Dash, Chemistry VR Photos, Development, Dev, Android, Website, Play Store, Games, VR, Unity"/>
 		<style type="text/css">
 			.mdl-layout__content .heading-div .heading {
-				background-image: url('/images/rabbit-dash/rabbit-dash-header.PNG');
+				background-image: url('/images/rabbit-dash/rabbit-dash-header.png');
 			}
 		</style>
 
@@ -88,7 +88,7 @@
 					Share this page via
 					<br>
 					<!-- Go to www.addthis.com/dashboard to customize your tools -->
-					<div class="addthis_inline_share_toolbox" style="padding-left: 1%"></div>	
+					<div class="addthis_inline_share_toolbox" data-url="picoplanetdev.tk/rabbit-dash" data-title="Rabbit Dash VR - PicoPlanet Developing" style="padding-left: 1%"></div>	
 				</p>
 				
 			</main>
