@@ -13,7 +13,7 @@
 		<meta name="keywords" content="PicoPlanet, PicoPlanetDev, App, Apps, VR Playground, Rabbit Dash, Chemistry VR Photos, Development, Dev, Android, Website, Play Store, Games, VR, Unity"/>
 		<style type="text/css">
 			.mdl-layout__content .heading-div .heading {
-				background-image: url('/images/background/PicoPlanetBackground6.PNG');
+				background-image: url('/images/background/PicoPlanetBackground6.png');
 				background-position: top;
 			}
 		</style>
@@ -93,7 +93,7 @@
 					<b>Share this site</b> on Social Media below!
 					<br>
 					<!-- Go to www.addthis.com/dashboard to customize your tools -->
-	                <div class="addthis_inline_share_toolbox" style="padding-left: 1%"></div>
+	                <div class="addthis_inline_share_toolbox" data-url="picoplanetdev.tk/social" data-title="Social - PicoPlanet Developing" style="padding-left: 1%"></div>
 				</p>
 				<p class="paragraph">
 					Please consider <a href="donate.html">making a donation</a> to PicoPlanet!
